# iced_fonts

./: .gitignore  Cargo.toml  README.md  flake.nix
examples/: bootstrap.rs  codicon.rs  custom.rs  devicon.rs  fontawesome.rs  lucide.rs  nerd.rs  octicons.rs  pomicons.rs
macros/: Cargo.toml
macros/src/: lib.rs
src/: bootstrap.rs  lib.rs  nerd.rs  required.rs
