[package]
name = "iced_fonts"
description = "Include fonts via feature flags in your Iced project!"
version = "0.2.0"
edition = "2024"
license = "MIT"
homepage = "https://iced.rs"
repository = "https://github.com/Redhawk18/iced_fonts"
keywords = ["gui", "iced", "fonts"]
categories = ["gui"]
readme = "README.md"
authors = [ "Redhawk18" ]

[features]
default = ["required"]
required = []
bootstrap = []
nerd = []
full = ["bootstrap", "nerd"]

[dependencies.iced_core]
version = "0.14.0-dev"
git = "https://github.com/iced-rs/iced.git"
rev = "beddf49c76f3b43e7b33452831e1293cad28fd89"

[dependencies.iced_widget]
version = "0.14.0-dev"
git = "https://github.com/iced-rs/iced.git"
rev = "beddf49c76f3b43e7b33452831e1293cad28fd89"

[package.metadata.docs.rs]
features = ["required", "full"]
rustdoc-args = ["--document-private-items"]
