[package]
name = "iced_fonts_macros"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true
authors.workspace = true

[features]
# default = ["_generate_demo"]
default = []
_generate_demo = []

[lib]
proc-macro = true

[dependencies]
iced_core.workspace = true
iced_widget.workspace = true
proc-macro2.workspace = true 
quote.workspace = true 
syn.workspace = true
ttf-parser.workspace = true

